--- a/EZGraphs/EZGraphsApp/qml.qrc
+++ b/EZGraphs/EZGraphsApp/qml.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>HeaderMainWindow.qml</file>
+        <file>ButtonTemplate.qml</file>
+        <file>FooterMainWindow.qml</file>
     </qresource>
 </RCC>
